@@ -19,6 +19,10 @@ wallet 0.6 (unreleased)
     keytab keys into that file rather than moving aside the old keytab and
     creating a new keytab with only the new keys.
 
+    The wallet client now supports a -u option, saying to obtain Kerberos
+    credentials for the given user and use those for authentication rather
+    than using an existing ticket cache.
+
     Support enforcing a naming policy for wallet objects via a Perl
     function in the wallet server configuration file.
 
